Workaround for gradle to work under Java 9.