@@ -125,6 +125,14 @@ allprojects {
 	findbugs {
 		sourceSets = []
 	}
+
+	// special Java 9 hack needed for gradle
+	// https://github.com/gradle/gradle/issues/1095
+	tasks.withType(Test) {
+		if(JavaVersion.current() == JavaVersion.VERSION_1_9) {
+			jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+		}
+	}
 }
 	
 configure(subprojects.findAll {it.name == 'server' || it.name == 'client'}) { 
